# GTL-CS7630-AutonomousRobotics

./: ProcedureMission.txt
acpi_monitor/: CMakeLists.txt  mainpage.dox  package.xml
acpi_monitor/src/: acpi_monitor.py
ar_loc_base/launch/: test_ar.launch
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/launch/: .turtlemimic.launch.swp  turtlemimic.launch
beginner_tutorials/scripts/: add_two_ints_client.py  add_two_ints_server.py
collision_avoidance/: CMakeLists.txt  package.xml
collision_avoidance/launch/: ca.launch  ca_turtlebot.launch
collision_avoidance/src/: collision_avoidance.cpp
face_detect/: CMakeLists.txt  manifest.xml  package.xml
face_detect/launch/: face_detect.launch
face_detect/msg/: FaceDetected.msg  ImageRoiSensor.msg
face_detect/src/: rosfacedetect.py
floor_nav/: CMakeLists.txt  package.xml
floor_nav/cfg/: TaskAutoDock.cfg  TaskCheckBatt.cfg  TaskConstant.cfg  TaskExploration.cfg  TaskGoToDock.cfg
floor_nav/launch/: launch_turtlebot.launch
floor_nav/missions/: final_mission.py  get_pose_get_home.py  only_exploration.py  test_battery_IT.py  test_goto.py  test_only_batt.py  test_planto.py  test_set_heading.py
floor_nav/src/: SimTasksEnv.cpp
floor_nav/tasks/: .TaskGoToDock.h.swp  TaskAutoDock.cpp  TaskAutoDock.h  TaskCheckBatt.cpp  TaskCheckBatt.h  TaskConstant.cpp  TaskConstant.h  TaskExploration.cpp  TaskExploration.h  TaskGoToDock.cpp  TaskGoToDock.h  TaskPlanTo.cpp
learning_joy/: CMakeLists.txt  package.xml
occgrid_planner_base/: CMakeLists.txt
vrep_ros_teleop/: CMakeLists.txt
(+37 files in other folders)
